--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -62,6 +62,13 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           autoreconf -fi
+
+          if [ "${{ runner.os }}" = "macOS" ]; then
+            BREW_PREFIX="$(brew --prefix)"
+            export CPPFLAGS="-I${BREW_PREFIX}/include"
+            export LDFLAGS="-L${BREW_PREFIX}/lib"
+          fi
+
           ./configure
           make -j"$(getconf _NPROCESSORS_ONLN)"
 
