--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -27,6 +27,7 @@ jobs:
             g++ make \
             libogg-dev libvorbis-dev libvorbisenc2 libvorbisenc2 \
             libopus-dev libmp3lame-dev libflac-dev portaudio19-dev libsamplerate0-dev libfdk-aac-dev \
+            libportmidi-dev libcurl4-openssl-dev libssl-dev \
             libx11-dev libxext-dev libxft-dev libxinerama-dev libxcursor-dev \
             libfltk1.3-dev
 
@@ -35,7 +36,8 @@ jobs:
         run: |
           brew update
           brew install autoconf automake libtool pkg-config \
-            fltk libogg libvorbis opus lame flac portaudio libsamplerate fdk-aac
+            fltk libogg libvorbis opus lame flac portaudio libsamplerate fdk-aac \
+            portmidi openssl curl
 
       - name: Install deps (Windows/MSYS2)
         if: runner.os == 'Windows'
@@ -53,9 +55,12 @@ jobs:
             mingw-w64-x86_64-lame
             mingw-w64-x86_64-flac
             mingw-w64-x86_64-portaudio
+            mingw-w64-x86_64-portmidi
             mingw-w64-x86_64-libsndfile
             mingw-w64-x86_64-libsamplerate
             mingw-w64-x86_64-fdk-aac
+            mingw-w64-x86_64-curl
+            mingw-w64-x86_64-openssl
             make
 
       - name: Build (Linux/macOS)
