--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -24,6 +24,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             autoconf automake libtool pkg-config \
+            gettext \
             g++ make \
             libogg-dev libvorbis-dev libvorbisenc2 libvorbisenc2 \
             libopus-dev libmp3lame-dev libflac-dev portaudio19-dev libsamplerate0-dev libfdk-aac-dev \
@@ -36,6 +37,7 @@ jobs:
         run: |
           brew update
           brew install autoconf automake libtool pkg-config \
+            gettext \
             fltk libogg libvorbis opus lame flac portaudio libsamplerate fdk-aac \
             portmidi openssl curl
 
@@ -61,6 +63,8 @@ jobs:
             mingw-w64-x86_64-fdk-aac
             mingw-w64-x86_64-curl
             mingw-w64-x86_64-openssl
+            mingw-w64-x86_64-gettext
+            gettext
             make
 
       - name: Build (Linux/macOS)
