--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -90,9 +90,9 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: butt-${{ matrix.os }}-${{ github.ref_name }}
+          name: bnbutt-${{ matrix.os }}-${{ github.ref_name }}
           path: |
-            src/butt*
+            src/bnbutt*
             **/*.exe
             **/*.app
           if-no-files-found: warn
