--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -9,35 +9,91 @@ on:
 permissions:
   contents: write
 
-jobs:
-  build:
-    name: build (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+env:
+  APP_NAME: bnbutt
+  APP_DISPLAY: "bnbutt - beats 'n breaks use this tool"
 
+jobs:
+  # ---------------------------------------------------------------------------
+  #  Linux  -  binary tar.gz + AppImage
+  # ---------------------------------------------------------------------------
+  build-linux:
+    name: Linux
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install deps (Ubuntu)
-        if: runner.os == 'Linux'
+      - name: Install build deps
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             autoconf automake libtool pkg-config \
             gettext \
             g++ make \
-            libogg-dev libvorbis-dev libvorbisenc2 libvorbisenc2 \
-            libopus-dev libmp3lame-dev libflac-dev portaudio19-dev libsamplerate0-dev libfdk-aac-dev \
+            libogg-dev libvorbis-dev libvorbisenc2 \
+            libopus-dev libmp3lame-dev libflac-dev portaudio19-dev \
+            libsamplerate0-dev libfdk-aac-dev \
             libportmidi-dev libcurl4-openssl-dev libssl-dev \
             libdbus-1-dev \
             libx11-dev libxext-dev libxft-dev libxinerama-dev libxcursor-dev \
-            libfltk1.3-dev
+            libfltk1.3-dev \
+            file desktop-file-utils libfuse2 \
+            curl
 
-      - name: Install deps (macOS)
-        if: runner.os == 'macOS'
+      - name: Build
+        run: |
+          ./configure --prefix=/usr
+          make -j"$(nproc)"
+
+      - name: Package portable tar.gz
+        run: |
+          TAG="${GITHUB_REF_NAME:-dev}"
+          mkdir -p pkg/bnbutt
+          cp src/bnbutt pkg/bnbutt/
+          cp usr/share/applications/bnbutt.desktop pkg/bnbutt/
+          cp usr/share/icons/hicolor/256x256/apps/bnbutt.png pkg/bnbutt/
+          cp README pkg/bnbutt/ 2>/dev/null || true
+          tar -czf "bnbutt-${TAG}-linux-x86_64.tar.gz" -C pkg bnbutt
+
+      - name: Build AppImage
+        run: |
+          TAG="${GITHUB_REF_NAME:-dev}"
+          curl -fSL -o linuxdeploy \
+            https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          chmod +x linuxdeploy
+
+          mkdir -p AppDir/usr/bin
+          mkdir -p AppDir/usr/share/applications
+          mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
+
+          cp src/bnbutt AppDir/usr/bin/
+          cp usr/share/applications/bnbutt.desktop AppDir/usr/share/applications/
+          cp usr/share/icons/hicolor/256x256/apps/bnbutt.png AppDir/usr/share/icons/hicolor/256x256/apps/
+
+          OUTPUT="bnbutt-${TAG}-x86_64.AppImage" \
+          ./linuxdeploy --appdir AppDir \
+            --desktop-file AppDir/usr/share/applications/bnbutt.desktop \
+            --icon-file AppDir/usr/share/icons/hicolor/256x256/apps/bnbutt.png \
+            --output appimage
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-packages
+          path: |
+            bnbutt-*-linux-x86_64.tar.gz
+            bnbutt-*-x86_64.AppImage
+
+  # ---------------------------------------------------------------------------
+  #  macOS  -  .app bundle inside a .zip
+  # ---------------------------------------------------------------------------
+  build-macos:
+    name: macOS
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install deps
         run: |
           brew update
           brew install autoconf automake libtool pkg-config \
@@ -45,8 +101,64 @@ jobs:
             fltk libogg libvorbis opus lame flac portaudio libsamplerate fdk-aac \
             portmidi openssl curl
 
-      - name: Install deps (Windows/MSYS2)
-        if: runner.os == 'Windows'
+      - name: Build
+        run: |
+          BREW_PREFIX="$(brew --prefix)"
+          export CPPFLAGS="-I${BREW_PREFIX}/include"
+          export LDFLAGS="-L${BREW_PREFIX}/lib"
+          export PKG_CONFIG_PATH="${BREW_PREFIX}/lib/pkgconfig:${BREW_PREFIX}/share/pkgconfig"
+          ./configure
+          make -j"$(sysctl -n hw.ncpu)"
+
+      - name: Create .app bundle
+        run: |
+          TAG="${GITHUB_REF_NAME:-dev}"
+          BUNDLE="bnbutt.app"
+
+          mkdir -p "${BUNDLE}/Contents/MacOS"
+          mkdir -p "${BUNDLE}/Contents/Resources"
+
+          cp src/bnbutt "${BUNDLE}/Contents/MacOS/bnbutt"
+          cp icons/bnbutt.icns "${BUNDLE}/Contents/Resources/bnbutt.icns"
+
+          cat > "${BUNDLE}/Contents/Info.plist" << 'PLIST'
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
+            "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+            <key>CFBundleExecutable</key>        <string>bnbutt</string>
+            <key>CFBundleName</key>              <string>bnbutt</string>
+            <key>CFBundleDisplayName</key>       <string>bnbutt</string>
+            <key>CFBundleIdentifier</key>        <string>com.bnbutt.bnbutt</string>
+            <key>CFBundleIconFile</key>          <string>bnbutt</string>
+            <key>CFBundlePackageType</key>       <string>APPL</string>
+            <key>CFBundleSignature</key>         <string>????</string>
+            <key>NSHighResolutionCapable</key>   <true/>
+            <key>NSMicrophoneUsageDescription</key>
+            <string>bnbutt needs microphone access to broadcast audio.</string>
+          </dict>
+          </plist>
+          PLIST
+
+          zip -r "bnbutt-${TAG}-macos.zip" "${BUNDLE}"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-packages
+          path: bnbutt-*-macos.zip
+
+  # ---------------------------------------------------------------------------
+  #  Windows (MSYS2/MinGW64)  -  portable .zip with exe + DLLs + installer
+  # ---------------------------------------------------------------------------
+  build-windows:
+    name: Windows
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
           update: true
@@ -68,61 +180,72 @@ jobs:
             mingw-w64-x86_64-curl
             mingw-w64-x86_64-openssl
             mingw-w64-x86_64-gettext
+            mingw-w64-x86_64-nsis
             gettext
             make
+            zip
 
-      - name: Build (Linux/macOS)
-        if: runner.os != 'Windows'
-        run: |
-          if [ "${{ runner.os }}" = "macOS" ]; then
-            BREW_PREFIX="$(brew --prefix)"
-            export CPPFLAGS="-I${BREW_PREFIX}/include"
-            export LDFLAGS="-L${BREW_PREFIX}/lib"
-          fi
-
-          ./configure
-          make -j"$(getconf _NPROCESSORS_ONLN)"
-
-      - name: Build (Windows/MSYS2)
-        if: runner.os == 'Windows'
+      - name: Build
         shell: msys2 {0}
         run: |
           ./configure
           make -j"$(nproc)"
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: bnbutt-${{ matrix.os }}-${{ github.ref_name }}
-          path: |
-            src/bnbutt*
-            **/*.exe
-            **/*.app
-          if-no-files-found: warn
-
-  release:
-    name: release
-    runs-on: ubuntu-latest
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          pattern: bnbutt-*
-          path: dist
-
-      - name: Package release artifacts
+      - name: Package portable zip
+        shell: msys2 {0}
         run: |
-          cd dist
-          for dir in bnbutt-*; do
-            if [ -d "$dir" ]; then
-              zip -r "${dir}.zip" "$dir"
-            fi
+          TAG="${GITHUB_REF_NAME:-dev}"
+          mkdir -p pkg
+
+          cp src/bnbutt.exe pkg/
+
+          MINGW_BIN="/mingw64/bin"
+          for dll in $(ldd src/bnbutt.exe | grep "$MINGW_BIN" | awk '{print $3}'); do
+            cp "$dll" pkg/
           done
 
-      - name: Create GitHub release
+          cd pkg
+          zip -r "../bnbutt-${TAG}-windows-x64-portable.zip" .
+
+      - name: Build installer
+        shell: msys2 {0}
+        run: |
+          TAG="${GITHUB_REF_NAME:-dev}"
+          VERSION="${TAG#v}"
+          makensis -DVERSION="${VERSION}" -DPKG_DIR=pkg installer.nsi
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-packages
+          path: |
+            bnbutt-*-windows-x64-portable.zip
+            bnbutt-*-windows-x64-setup.exe
+
+  # ---------------------------------------------------------------------------
+  #  Release  -  create GitHub release and attach all artifacts (tag pushes only)
+  # ---------------------------------------------------------------------------
+  release:
+    name: Release
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [build-linux, build-macos, build-windows]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+          merge-multiple: true
+
+      - name: Generate checksums
+        run: |
+          cd dist
+          sha256sum bnbutt-* > SHA256SUMS
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/*.zip
           generate_release_notes: true
+          files: dist/*
