--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -94,8 +94,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install deps
+        env:
+          HOMEBREW_NO_AUTO_UPDATE: 1
+          HOMEBREW_NO_INSTALL_FROM_API: 1
+          HOMEBREW_NO_ANALYTICS: 1
         run: |
-          brew update
           brew install autoconf automake libtool pkg-config \
             gettext \
             fltk libogg libvorbis opus lame flac portaudio libsamplerate fdk-aac \
